2007-11-07 Jim Sack <jgsack@san.rr.com>
	* src/ArgHandler.py: typos in cl_export at L562,3 bug #1353
	triggered by exporting gedcom

2007-11-07 Benny Malengier <benny.malengier@gramps-project.org>
	* src/AddMedia.py: fix issue #1350, relative path not working addmedia
	* src/Editors/_EditPerson.py: family rebuild callback error

2007-11-07 Benny Malengier <benny.malengier@gramps-project.org>
	* src/AddMedia.py: add media crash, fix issue #1349

2007-11-05 Jim Sack <jgsack@san.rr.com>
	* src/ansel_utf8.py: fix old typo in ansel char 0xAE 
	was U+02BE, changed to U+02BC (now same as 3.0 code)

2007-11-05 Jim Sack <jgsack@san.rr.com>
        * remove 2 files from version control: config.guess and config.sub
        These are generated by configure (via autogen.sh).

2007-11-03 Gary Burton <gary.burton@zen.co.uk>
	* src/plugins/DetDescendantReport.py
	* src/plugins/DetAncestralReport.py
	Added functionality to print event and event reference notes. issue #1335

2007-11-02 Stéphane Charette <stephanecharette@gmail.com>
	* src/plugins/NarrativeWeb.py: issue #1340, do not display mime-types
	in NarrativeWeb for image/*

2007-10-31 Jim Sack <jgsack@san.rr.com>
	* src/Gramps.py In run(), skip error-dialog for things like 
	exit(0) such as used when processing command-line operations.
	Add missing gtk.main_quit needed to terminate process

2007-10-29 Gary Burton <gary.burton@zen.co.uk>
	* src/RelLib/_Person.py: setting the death index wrongly.

2007-10-29 Gary Burton <gary.burton@zen.co.uk>
	* src/RelLib/_Person.py: reset birth and death indexes after deleting
	an event. Fixes #1327

2007-10-28 Gary Burton <gary.burton@zen.co.uk>
	* src/Editors/_EditPlace.py: fixed name of street MonitoredEntry
	* src/Editors/_EditLocation.py: fixed name of street MonitoredEntry
	MonitoredEntry field for street wrongly named as city.
	Caused strange occasional drag and drop bug. issue #1304

2007-10-28 Gary Burton <gary.burton@zen.co.uk>