@@ -1,3 +1,7 @@
+2007-11-10 Gary Burton <gary.burton@zen.co.uk>
+	* src/plugins/IndivComplete.py: added support for printing
+	non-primary, non-family events.
+
 2007-11-07 Jim Sack <jgsack@san.rr.com>
 	* src/ArgHandler.py: typos in cl_export at L562,3 bug #1353
 	triggered by exporting gedcom
